--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <div class="conteudo">
             <nav id="menu-h">
                 <ul>
-                    <li><a href="#">Sobre Mim</a></li>
-                    <li><a href="#">Formações</a></li>
-                    <li><a href="#">Minhas Competências</a></li>
-                    <li><a href="#">Contatos</a></li>
+                    <li><a href="#1">Sobre Mim</a></li>
+                    <li><a href="#2">Formações</a></li>
+                    <li><a href="#3">Minhas Competências</a></li>
+                    <li><a href="#4">Contatos</a></li>
                 </ul>
             </nav>
             <div class="sobre">
-                <div class="titulo">
+                <div class="titulo id="1">
                     <span>
                         <p class='h1a'> SOBRE MIM ! </p>
                     </span>
@@ -45,7 +45,7 @@
             <div class="formacoes">
                 <div class="titulo">
                     <span>
-                        <p class='h1b'> FORMAÇÕES ! </p>
+                        <p class='h1b' id="2"> FORMAÇÕES ! </p>
                     </span>
                 </div>
               
@@ -62,7 +62,7 @@
             <div class="competencias">
                 <div class="titulo">
                     <span>
-                        <p class='h1c'> COMPETÊNCIAS ! </p>
+                        <p class='h1c' id="3"> COMPETÊNCIAS ! </p>
                     </span>
                 </div>
                 <span>
